loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:6: error: not found: value estSurBiscuits
    if (estSurBiscuits()) nbBiscuits=nbBiscuits+1
        ^