loopdowhile.Poucet2.scala.code
var nbBiscuits:Int =0
while (sortieTrouvee==false) {
  nbBiscuits=0
  do {
    avance();
    if (estSurBiscuits()) nbBiscuits=nbBiscuits+1
  } while(crossing()==false)
}
avance()